--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   csv: ^5.0.1
   cupertino_icons: ^1.0.8
   path_provider: ^2.0.11
+  mockito: ^5.0.0
 
 dev_dependencies:
   flutter_test:
