--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -34,12 +34,15 @@ dependencies:
   csv: ^5.0.1
   cupertino_icons: ^1.0.8
   path_provider: ^2.0.11
-  mockito: ^5.0.0
+  mockito: ^5.0.16
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  
+  integration_test:
+    sdk: flutter
+  flutter_driver:
+    sdk: flutter
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
